Compilation with multiple --add-exports and --release fails with ecj #114
Report this combination of options as an error, like javac does (batch)